--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Serge's Web Page</title>
+    <title>Serge's HTML&CSS Course Web Page</title>
 </head>
 <body>
-    <h1>CV of REDI Teacher</h1>
-    <p>This is my CV WebSite</p>
+   <header>
+      <h1>CV of REDI Teacher</h1>
+      <p>This is my CV WebSite</p>
+   </header>
+
+   <hr>
+
+   <h2>Education</h2>
+   <p><mark>National University</mark></p>
+   
+   <h2>Experience</h2>
+   <p>Internet <strong>Service Provider</strong></p>
+
+   <h2>Skills</h2>
+   <p><ins>DataBases</ins>, *NIX OS, Postfix</p>
+
+   <br>
+
+   <hr>
+
+   <footer>
+      <h3>Contact</h3>
+      <p>Developed by <b>Serge Bondar</b></p>
+      <p>Address: Bielefeld <sup>NRW</sup></p>
+      <p>Email: <i>somemail@gmail.com</i></p>
+      <p>Phone: <u>+49 xxx-xxx-xx-xx</u></p>
+   </footer>
 </body>
 </html>
