--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
    </header>
 
    <hr>
+   
+   <!-- Some personal information -->
 
    <h2>Education</h2>
    <p><mark>National University</mark></p>
@@ -26,6 +28,8 @@
    <br>
 
    <hr>
+   
+   <!-- Footer block -->
 
    <footer>
       <h3>Contact</h3>
