--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
    <header>
       <h1>CV of REDI Teacher</h1>
       <p>This is my CV WebSite</p>
+
+      <nav>
+         <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="about.html">About me</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="contects.html">Contacts</a></li>
+         </ul>
+      </nav>
+
+      <img src="portrait_24.03.24_github.jpg">
    </header>
 
    <hr>
