--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          </ul>
       </nav>
 
-      <img src="portrait_24.03.24_github.jpg">
+      <img src="portrait_github_site.jpg">
    </header>
 
    <hr>
