--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="about.html">About me</a></li>
             <li><a href="experience.html">Experience</a></li>
-            <li><a href="contects.html">Contacts</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
          </ul>
       </nav>
 
