--- a/about.html
+++ b/about.html
@@ -1,2 +1,31 @@
-<h1>Hello Friends!)<br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Serge's HTML&CSS Course Web Page</title>
+</head>
+<body>
+   <header>
+      <h1>CV of REDI Teacher</h1>
+      <p>This is my CV WebSite</p>
+
+      <nav>
+         <ul>
+            <li><a href="/">Home</a></li>
+            <li><b>About me</b></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+         </ul>
+      </nav>
+   </header>
+
+   <hr>
+   
+   <!-- A little bit about me -->
+
+   <h1>Hello Friends!)<br>
     Let me introduce myself</h1>
+</body>
+</html>
