--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       <p>Address: Bielefeld <sup>NRW</sup></p>
       <p>Email: <i>somemail@gmail.com</i></p>
       <p>Phone: <u>+49 xxx-xxx-xx-xx</u></p>
+
+      <p>Serge B.<br>
+         <i>Deutschland, Spring Course</i>
+      </p>
    </footer>
 </body>
 </html>
