--- a/about.html
+++ b/about.html
@@ -27,5 +27,11 @@
 
    <h1>Hello Friends!)<br>
     Let me introduce myself</h1>
+
+    <footer>
+        <p>Serge B.<br>
+           <i>Deutschland, Spring Course</i>
+        </p>
+     </footer>
 </body>
 </html>
