--- a/contacts.html
+++ b/contacts.html
@@ -1,1 +1,6 @@
 <h1>Please contact me</h1>
+
+      <p>Developed by <b>Serge Bondar</b></p>
+      <p>Address: Bielefeld <sup>NRW</sup></p>
+      <p>Email: <i>somemail@gmail.com</i></p>
+      <p>Phone: <u>+49 xxx-xxx-xx-xx</u></p>
