--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     Let me introduce myself</h1>
 
     <footer>
-        <p>Serge B.<br>
+        <p class="copyright">Serge B.<br>
            <i>Deutschland, Spring Course</i>
         </p>
      </footer>
