--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <!-- Footer block -->
 
    <footer>
-      <p>Serge B.<br>
+      <p class="copyright">Serge B.<br>
          <i>Deutschland, Spring Course</i>
       </p>
    </footer>
