--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p>This is my CV WebSite</p>
 
       <nav>
-         <ul>
+         <ul id="menu">
             <li><a href="about.html">About me</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="contacts.html">Contacts</a></li>
