--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          </ul>
       </nav>
 
-      <img src="portrait_github_site.jpg" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+      <img src="portrait_github_site.jpg" class="portrait">
    </header>
 
    <hr>
