--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          </ul>
       </nav>
 
-      <img src="portrait_github_site.jpg" class="portrait">
+      <img src="portrait_github_site.jpg" class="portrait"><br>
    </header>
 
    <hr>
