--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <ul id="menu">
             <li><a href="about.html">About me</a></li>
             <li><a href="experience.html">Experience</a></li>
-            <li><a href="contacts.html">Contacts</a></li>
+            <li><a href="contact.html">Contact</a></li>
          </ul>
       </nav>
 
