--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <p>Phone: <u>+49 xxx-xxx-xx-xx</u></p>
 
 <form>
-      <label for="name">Your name</label><br>
+      <label for="name">Your name</label> &nbsp;
       <input type="text" id="name"><br><br>
       
       <input type="submit">
