--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
 <p>Email: <i>somemail@gmail.com</i></p>
 <p>Phone: <u>+49 xxx-xxx-xx-xx</u></p>
 
+<h2>Mail me</h2>
+
 <form>
       <label for="name">Your name</label> &nbsp;
       <input type="text" id="name"><br><br>
